# ml-lightning-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
app/: application.py  main.py  train.py
app/config/: __init__.py  model.py  utils.py
app/core/containers/: __init__.py  application.py  dataloader.py  dataset.py  executor.py  model.py  model_checkpoint.py  model_container.py  optimizer.py  scheduler.py  trainer.py
app/core/ioc_containers/: application.py  train.py
app/core/patterns/: __init__.py  singleton.py
app/core/registry/: __init__.py  registry.py
app/services/: trainer.py
app/services/model_containers/: base.py  mnist_container.py
app/services/models/: base.py  mnist.py
examples/mnist/: container.py  model.py  train.py
examples/mnist/resources/: application.yaml
ml_training_template/: application.py
ml_training_template/config/: __init__.py  model.py  utils.py
ml_training_template/core/: containers.py
ml_training_template/core/containers_back/: __init__.py  dataloader.py  executor.py  model_container.py  trainer.py
ml_training_template/core/di_containers/: __init__.py  containers.py
ml_training_template/core/interfaces/: __init__.py  containers.py  dataloaders.py  datasets.py  models.py  optimizers.py  schedulers.py  trainers.py
ml_training_template/core/ioc_container/: __init__.py  data.py  model_checkpoint.py  model_container.py  tainer.py
ml_training_template/core/ioc_containers/: __init__.py  (+5 more)
resources/: default.yaml
tests/: conftest.py  test_sample.py
(+30 files in other folders)
