[tool.poetry]
name = "ml_training_template"
version = "0.0.1.dev"
description = ""
authors = ["martinHwang <dhhwang89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
omegaconf = "^2.2.3"
PyYAML = "^6.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
pytorch-lightning = "^1.8.0"
dependency-injector = "^4.41.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
